# task-vt

./: .travis.yml  CorornaWyhy_PPI_BioContext_experiment.ipynb  README.md  requirements.txt  setup.cfg
contradictory_claims/notebooks/: 2T.4.5 Claim extraction.ipynb  covid_vt_contra_metadata_filtering.ipynb  covid_vt_contra_text_preprocessing.ipynb  vt_contra_formatting_mednli_input_and_output.ipynb  vt_contra_metadata_filtering.ipynb  vt_contra_paper_section_filtering.ipynb  vt_contra_spacy_generate_entity_ruler.ipynb  vt_contra_text_preprocessing.ipynb  vt_contra_text_processing.ipynb
covid_mechanism_kg/notebooks/: INDRA_Graph_text.ipynb
docs/source/: conf.py  index.rst  introduction.rst  versioning.rst
drug_ADE/: Text_preprocessing.ipynb
drug_ADE/.ipynb_checkpoints/: Text_preprocessing-checkpoint.ipynb
drug_ADE/data/: DrugNames.txt  covid_19_terms.txt
drug_ADE/data/output/: drug_ade_dataset.csv  drug_ade_dataset_covid.csv  drug_mentions.csv  section_texts_with_drug_mentions_ann_200504.csv  section_texts_with_drug_mentions_ann_200516.csv
drug_treatment_extraction/notebooks/: ROBERTA_RE.ipynb
src/coronawhy_vt/: __init__.py  version.py
src/relation_extraction_model/: model_tests.py  re_model.py
src/relation_extraction_model/transformer_dir/: config.json
twitter_sentiment/: Sentiment_Analysis_'vaccine'_CoVid_2019.ipynb
