##########################
# Setup.py Configuration #
##########################
[metadata]
name = coronawhy_vt
version = 0.0.1-dev
description = CoronaWhy Vaccines and Therapeutics Task Force
long_description = file: README.rst

[options]
install_requires =
    jupyter
    matplotlib
    numpy
    pandas
    pytest
    scikit-learn
    scipy
    spacy
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
